Modification to scan_type part of filename

--- a/amof_radars.yml
+++ b/amof_radars.yml
@@ -12,7 +12,7 @@
     instrument_pid: 
     
     instrument_software: 
-    instrument_software_version: -9.9
+    instrument_software_version: 
 
     references: www.metek.de
   
